examples/parser/with_effect.an
main () =
    iota 10
        with filter even
        with map (_ * 2)
        with for print

// args: -e ast --no-color
// expected exit status: 1
// expected stdout:
// main () =
//     iota 10


// expected stderr:
// examples/parser/with_effect.an:3:9
// 2 |     iota 10
// 3 |         with filter even	// error: Expected the end of this block but found `with`
//   |         ^^^^
// 4 |         with map (_ * 2)
// 
// Found 1 error and 0 warnings

